--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -18,7 +18,7 @@ jobs:
           fetch-depth: 2
       - name: Get matrix 
         id: set-matrix
-        run: echo ::set-output name=matrix::$(cat VERSION)
+        run: echo ::set-output name=matrix::$(cat containers.json)
   docker:
     runs-on: ubuntu-latest
     strategy:
