--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -19,8 +19,15 @@ jobs:
       - name: Get matrix 
         id: set-matrix
         run: echo matrix=$(cat $GITHUB_WORKSPACE/containers.json) >> $GITHUB_OUTPUT
+  log-metadata:
+    runs-on: ubuntu-latest
+    needs: metadata
+    steps:
+      - name: log
+        run: echo ${{needs.metadata.outputs.matrix}}
   docker:
     runs-on: ubuntu-latest
+    needs: metadata
     strategy:
       matrix: ${{ fromJson(needs.metadata.outputs.matrix) }}
     steps:
