--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -25,6 +25,9 @@ jobs:
     steps:
       - name: log
         run: echo ${{needs.metadata.outputs.matrix}}
+    steps:
+      - name: log json
+        run: echo ${{ fromJson(needs.metadata.outputs.matrix) }}
   docker:
     runs-on: ubuntu-latest
     needs: metadata
