--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -33,6 +33,8 @@ jobs:
     strategy:
       matrix: ${{ fromJson(needs.metadata.outputs.matrix) }}
     steps:
+      - name: log
+        run: echo ${{ matrix }}
       - name: Checkout
         uses: actions/checkout@v3
       - name: Set up Docker Buildx
