use path instead of context

--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -37,6 +37,8 @@ jobs:
         run: echo ${{ matrix }}
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2.5.0
       - name: Login to GHCR
@@ -60,7 +62,8 @@ jobs:
         id: release
         uses: docker/build-push-action@v4
         with:
-          context: $GITHUB_WORKSPACE/${{ matrix.path }}
+          context: .
+          path: $GITHUB_WORKSPACE/${{ matrix.path }}/Dockerfile
           labels: |-
             ${{ steps.vars.outputs.chan_label_type }}.created="${{ steps.vars.outputs.chan_build_date }}"
             ${{ steps.vars.outputs.chan_label_type }}.title="${{ matrix.name }}"
