remove caching for now

--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -78,5 +78,5 @@ jobs:
           tags: |-
             ghcr.io/tomcranitch/${{ matrix.name }}:latest
             ghcr.io/tomcranitch/${{ matrix.name }}:${{ matrix.version }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          # cache-from: type=gha
+          # cache-to: type=gha,mode=max
