git GITHUB_TOKEN permission to write package

--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -32,6 +32,8 @@ jobs:
     needs: metadata
     strategy:
       matrix: ${{ fromJson(needs.metadata.outputs.matrix) }}
+    permissions:
+      packages: write
     steps:
       - name: log
         run: echo ${{ matrix }}
