--- a/postgres-initdb-with-sql/Dockerfile
+++ b/postgres-initdb-with-sql/Dockerfile
@@ -15,6 +15,7 @@ RUN apk add --no-cache ca-certificates postgresql14-client
 USER kah
 
 COPY ./postgres-initdb-with-sql/entrypoint.sh /entrypoint.sh
+RUN ["chmod", "+x", "/entrypoint.sh"]
 
 CMD ["/entrypoint.sh"]
 
